added end of sentence tagging to contexts.