@@ -369,8 +369,8 @@ static void yy_fatal_error (yyconst char msg[]  );
 	*yy_cp = '\0'; \
 	(yy_c_buf_p) = yy_cp;
 
-#define YY_NUM_RULES 4
-#define YY_END_OF_BUFFER 5
+#define YY_NUM_RULES 5
+#define YY_END_OF_BUFFER 6
 /* This struct is not used in this scanner,
    but its presence is necessary. */
 struct yy_trans_info
@@ -380,19 +380,19 @@ struct yy_trans_info
 	};
 static yyconst flex_int16_t yy_accept[12] =
     {   0,
-        0,    0,    5,    1,    3,    2,    1,    2,    3,    2,
+        0,    0,    6,    1,    4,    3,    1,    2,    3,    4,
         0
     } ;
 
 static yyconst flex_int32_t yy_ec[256] =
     {   0,
-        1,    1,    1,    1,    1,    1,    1,    1,    2,    2,
+        1,    1,    1,    1,    1,    1,    1,    1,    2,    3,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    2,    3,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    3,    1,    1,    1,    1,
+        1,    2,    4,    1,    1,    1,    1,    1,    1,    1,
+        1,    1,    1,    1,    1,    4,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    3,    1,    1,    1,    1,    1,    1,    1,
+        1,    1,    4,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
@@ -416,33 +416,33 @@ static yyconst flex_int32_t yy_ec[256] =
         1,    1,    1,    1,    1
     } ;
 
-static yyconst flex_int32_t yy_meta[4] =
+static yyconst flex_int32_t yy_meta[5] =
     {   0,
-        1,    2,    3
+        1,    2,    2,    1
     } ;
 
-static yyconst flex_int16_t yy_base[14] =
+static yyconst flex_int16_t yy_base[13] =
     {   0,
-        0,    0,    9,    3,    0,    7,    0,    0,    0,    0,
-       10,    5,    4
+        0,    0,   10,    4,    0,    8,    0,   11,    0,    0,
+       11,    4
     } ;
 
-static yyconst flex_int16_t yy_def[14] =
+static yyconst flex_int16_t yy_def[13] =
     {   0,
-       11,    1,   11,   11,   12,    4,    4,    6,   12,   13,
-        0,   11,   11
+       11,    1,   11,   11,   12,    4,    4,   11,    6,   12,
+        0,   11
     } ;
 
-static yyconst flex_int16_t yy_nxt[14] =
+static yyconst flex_int16_t yy_nxt[16] =
     {   0,
-        4,    5,    6,    7,   10,    8,    9,   10,   11,    3,
-       11,   11,   11
+        4,    5,    5,    6,    7,   10,    8,    9,    9,   11,
+        3,   11,   11,   11,   11
     } ;
 
-static yyconst flex_int16_t yy_chk[14] =
+static yyconst flex_int16_t yy_chk[16] =
     {   0,
-        1,    1,    1,    4,   13,    4,   12,    6,    3,   11,
-       11,   11,   11
+        1,    1,    1,    1,    4,   12,    4,    4,    6,    3,
+       11,   11,   11,   11,   11
     } ;
 
 static yy_state_type yy_last_accepting_state;
@@ -522,8 +522,6 @@ extern int yywrap (void );
 #endif
 #endif
 
-    static void yyunput (int c,char *buf_ptr  );
-    
 #ifndef yytext_ptr
 static void yy_flex_strncpy (char *,yyconst char *,int );
 #endif
@@ -650,10 +648,10 @@ YY_DECL
 	register char *yy_cp, *yy_bp;
 	register int yy_act;
     
-#line 11 "tokenizer.l"
+#line 12 "tokenizer.l"
 
 
-#line 657 "lex.yy.cpp"
+#line 655 "lex.yy.cpp"
 
 	if ( !(yy_init) )
 		{
@@ -712,7 +710,7 @@ yy_match:
 			yy_current_state = yy_nxt[yy_base[yy_current_state] + (unsigned int) yy_c];
 			++yy_cp;
 			}
-		while ( yy_base[yy_current_state] != 10 );
+		while ( yy_base[yy_current_state] != 11 );
 
 yy_find_action:
 		yy_act = yy_accept[yy_current_state];
@@ -738,26 +736,32 @@ do_action:	/* This label is used only to access EOF actions. */
 
 case 1:
 YY_RULE_SETUP
-#line 13 "tokenizer.l"
+#line 14 "tokenizer.l"
 { return TOKEN;}
 	YY_BREAK
 case 2:
-YY_RULE_SETUP
-#line 14 "tokenizer.l"
-{ return CANDIDATE;}
-	YY_BREAK
-case 3:
-/* rule 3 can match eol */
+/* rule 2 can match eol */
 YY_RULE_SETUP
 #line 15 "tokenizer.l"
-{ /*return WHITESPACE*/;}
+{ return ENDOFSENTENCE;}
+	YY_BREAK
+case 3:
+YY_RULE_SETUP
+#line 16 "tokenizer.l"
+{ return FALSEEND;}
 	YY_BREAK
 case 4:
+/* rule 4 can match eol */
 YY_RULE_SETUP
 #line 17 "tokenizer.l"
+{ /*return WHITESPACE*/;}
+	YY_BREAK
+case 5:
+YY_RULE_SETUP
+#line 19 "tokenizer.l"
 ECHO;
 	YY_BREAK
-#line 761 "lex.yy.cpp"
+#line 765 "lex.yy.cpp"
 case YY_STATE_EOF(INITIAL):
 	yyterminate();
 
@@ -1084,43 +1088,6 @@ static int yy_get_next_buffer (void)
 	yy_is_jam = (yy_current_state == 11);
 
 	return yy_is_jam ? 0 : yy_current_state;
-}
-
-    static void yyunput (int c, register char * yy_bp )
-{
-	register char *yy_cp;
-    
-    yy_cp = (yy_c_buf_p);
-
-	/* undo effects of setting up yytext */
-	*yy_cp = (yy_hold_char);
-
-	if ( yy_cp < YY_CURRENT_BUFFER_LVALUE->yy_ch_buf + 2 )
-		{ /* need to shift things up to make room */
-		/* +2 for EOB chars. */
-		register int number_to_move = (yy_n_chars) + 2;
-		register char *dest = &YY_CURRENT_BUFFER_LVALUE->yy_ch_buf[
-					YY_CURRENT_BUFFER_LVALUE->yy_buf_size + 2];
-		register char *source =
-				&YY_CURRENT_BUFFER_LVALUE->yy_ch_buf[number_to_move];
-
-		while ( source > YY_CURRENT_BUFFER_LVALUE->yy_ch_buf )
-			*--dest = *--source;
-
-		yy_cp += (int) (dest - source);
-		yy_bp += (int) (dest - source);
-		YY_CURRENT_BUFFER_LVALUE->yy_n_chars =
-			(yy_n_chars) = YY_CURRENT_BUFFER_LVALUE->yy_buf_size;
-
-		if ( yy_cp < YY_CURRENT_BUFFER_LVALUE->yy_ch_buf + 2 )
-			YY_FATAL_ERROR( "flex scanner push-back overflow" );
-		}
-
-	*--yy_cp = (char) c;
-
-	(yytext_ptr) = yy_bp;
-	(yy_hold_char) = *yy_cp;
-	(yy_c_buf_p) = yy_cp;
 }
 
 #ifndef YY_NO_INPUT
@@ -1755,7 +1722,7 @@ void yyfree (void * ptr )
 
 #define YYTABLES_NAME "yytables"
 
-#line 17 "tokenizer.l"
+#line 19 "tokenizer.l"
 
 
 
@@ -1786,14 +1753,27 @@ Token * getToken()
 	// get the data from the scanner.
 	tokenType type = (tokenType)yylex();
 	string * lexText = new string(yytext);
+	string * stripped = new string(lexText->substr(0, (lexText->length() -1)));
 	Token * returner = NULL;
 
 	// construct the token, if any
 	if (type)
-		returner = new Token((tokenType)type,lexText);
-
+	{	
+		/*if (type == ENDOFSENTENCE)
+		{	
+			string * tempString = new string(lexText->substr(0, (lexText->length() - 1)));
+			delete lexText;
+			lexText = tempString;
+		}
+		else*/
+		if (type == ENDOFSENTENCE)
+			returner = new Token((tokenType)type, stripped);
+		else
+			returner = new Token((tokenType)type,lexText);
+	}
 	// clean up
 	delete lexText;
+	delete stripped;
 
 	// return
 	return returner;
