@@ -1,5 +1,10 @@
-Hi there. My name is Mike.
-Mr. Dudemeister is angry! He will attack in 2.5 seconds. What will you do?
-Oh no, now he's on the chair. Get down from there, you don't even fit.
-What's this? "Make me.", you say?  O.K. I will!
+Hi there.
+ My name is Mike.
+Mr. Dudemeister is angry!
+He will attack in 2.5 seconds.
+What will you do?
+Oh no, now he's on the chair.
+Get down from there, you don't even fit.
+What's this? "Make me.", you say?
+O.K. I will!
 It's time you become K.I.A. Goodbye, Mr.
