@@ -1,1 +1,2 @@
-added end of sentence tagging to contexts.
+Implemented end of sentence detection in formatted input files. for contextualizer. It is now done!
+
